# voice-assistant

./: README.md  call_ollama.py  live_whisper_transcription.py  pyproject.toml  run_voice_assistant.py
