[tool.poetry]
name = "voice-assistant"
version = "0.1.0"
description = ""
authors = ["Yu-Cheng Tsai <yuchengtsai84@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
absl-py = "2.1.0"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.10.8"
aiosignal = "1.3.1"
altair = "5.4.1"
antlr4-python3-runtime = "4.9.3"
async-timeout = "4.0.3"
attrs = "24.2.0"
audioread = "3.0.1"
blinker = "1.8.2"
cachetools = "5.5.0"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.3.2"
click = "8.1.7"
contourpy = "1.3.0"
cycler = "0.12.1"
decorator = "5.1.1"
einops = "0.8.0"
filelock = "3.16.1"
fonttools = "4.54.1"
frozenlist = "1.4.1"
fsspec = "2024.9.0"
gitdb = "4.0.11"
gitpython = "3.1.43"
grpcio = "1.66.2"
huggingface-hub = "0.22.0"
hydra-core = "1.3.2"
idna = "3.10"
jinja2 = "3.1.4"
joblib = "1.4.2"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
kiwisolver = "1.4.7"
lazy-loader = "0.4"
librosa = "0.10.2.post1"
lightning-utilities = "0.11.7"
llvmlite = "0.43.0"
markdown = "3.7"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
matplotlib = "3.9.2"
mdurl = "0.1.2"
mpmath = "1.3.0"
msgpack = "1.1.0"
multidict = "6.1.0"
narwhals = "1.9.0"
nemo-toolkit = "1.21.0"
networkx = "3.3"
numba = "0.60.0"
omegaconf = "2.3.0"
onnx = "1.17.0"
packaging = "24.1"
pillow = "10.4.0"
platformdirs = "4.3.6"
pooch = "1.8.2"
protobuf = "5.28.2"
pyarrow = "17.0.0"
pycparser = "2.22"
pydeck = "0.9.1"
pygments = "2.18.0"
pyparsing = "3.1.4"
python-dateutil = "2.9.0.post0"
pytorch-lightning = "2.4.0"
pytz = "2024.2"
pyyaml = "6.0.2"
referencing = "0.35.1"
regex = "2024.9.11"
requests = "2.32.3"
rich = "13.9.1"
rpds-py = "0.20.0"
ruamel-yaml = "0.18.6"
ruamel-yaml-clib = "0.2.8"
safetensors = "0.4.5"
scikit-learn = "1.5.2"
scipy = "1.14.1"
six = "1.16.0"
smmap = "5.0.1"
sounddevice = "0.5.0"
soundfile = "0.12.1"
soxr = "0.5.0.post1"
streamlit = "1.39.0"
sympy = "1.13.3"
tenacity = "9.0.0"
tensorboard = "2.18.0"
tensorboard-data-server = "0.7.2"
text-unidecode = "1.3"
threadpoolctl = "3.5.0"
tokenizers = "0.19.0"
toml = "0.10.2"
torch = "2.2.2"
torchaudio = "2.2.2"
torchmetrics = "1.4.2"
tornado = "6.4.1"
tqdm = "4.66.5"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"
werkzeug = "3.0.4"
wget = "3.2"
wrapt = "1.16.0"
yarl = "1.13.1"
numpy = "1.23.5"
pandas = "1.4.1"
transformers = "4.40.0"
sentencepiece = "^0.2.0"
cython = "^3.0.11"
inflect = "^7.4.0"
webdataset = "^0.2.100"
pyannote-core = "^5.0.0"
pyannote-metrics = "^3.2.1"
editdistance = "^0.8.1"
jiwer = "^3.0.4"
ipython = "^8.28.0"
wandb = "^0.18.3"
nltk = "^3.9.1"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
